--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>CSS3 - My Production Menu</title>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/common.css" />
         <link href='http://fonts.googleapis.com/css?family=Galindo' rel='stylesheet' type='text/css' />
@@ -27,14 +27,22 @@
     <body>
         <div class="container">
             <div class="header">
-                <a href="index.html"><strong>&laquo; Back to Main Menu</strong></a>
+                <a href="index.html"><strong>Main Menu</strong></a>
                 <span class="right">
                 </span>
                 <div class="clr"></div>
             </div>
-            <h1>My Productions<span></span></h1>
+            <h1>Work<span></span></h1>
             <div class="content">
                 <ul class="demo-menu">
+                    <li>
+                        <a href="./github-notetaker">
+                            <span class="btn-head">React</span>
+                            <div class="btn-content">
+                                <h2 class="ca-main">Github NoteTaker</h2>
+                            </div>
+                        </a>
+                    </li>
                     <li>
                         <a href="php-blog/">
                             <span class="btn-head">PHP</span>
@@ -43,14 +51,14 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="jQuery-vision/">
                             <span class="btn-head">jQuery</span>
                             <div class="btn-content">
                                 <h2 class="ca-main">Vision</h2>
                             </div>
                         </a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="java-notepad/">
                             <span class="btn-head">Java</span>
@@ -75,7 +83,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="js-2DdynamicMenu/">
                             <span class="btn-head">JS</span>
                             <div class="btn-content">
@@ -98,7 +106,7 @@
                                 <h2 class="ca-main">Sum-up Value</h2>
                             </div>
                         </a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="flash-photoBrower/">
                             <span class="btn-head">Flash</span>
