Fix github notetaker link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="content">
                 <ul class="demo-menu">
                     <li>
-                        <a href="./github-notetaker">
+                        <a href="../github-notetaker">
                             <span class="btn-head">React</span>
                             <div class="btn-content">
                                 <h2 class="ca-main">Github NoteTaker</h2>
