--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" type="text/css" href="css/common.css" />
-  <link href='http://fonts.googleapis.com/css?family=Galindo' rel='stylesheet' type='text/css' />
+  <link href='//fonts.googleapis.com/css?family=Galindo' rel='stylesheet' type='text/css' />
 </head>
 <body>
   <div class="container">
